@@ -1,0 +1,10 @@
+<!--###CAPTCHA_INSERT### this subpart is removed if CAPTCHA is not enabled! -->
+	<div class="tx-your-extension-id-pi1-captcha">
+		<label for="tx_your_extension_id_pi1_captcha_response">###SR_FREECAP_NOTICE###</label>
+		###SR_FREECAP_CANT_READ###
+		<br />
+		<input type="text" size="15" id="tx_your_extension_id_pi1_captcha_response" name="tx_your_extension_id_pi1_pi1[captcha_response]" title="###SR_FREECAP_NOTICE###" value="">
+		###SR_FREECAP_IMAGE###
+		###SR_FREECAP_ACCESSIBLE###
+	</div>
+<!--###CAPTCHA_INSERT###-->
